🎨 consistent use of String.formatted, fix whitespace